SECURITY, N+1 QUERY, ERROR HANDLING, VALIDATION